# Linux-AGV-Controller

./: .gitignore  .gitmodules  8bitDo Pro 2 controller mapping.txt  CMakeLists.txt  README.md  compile_nodeset.sh  opcua-nodeset.uamodel  opcua-nodeset.xml  set_build_number.cmake
MQTT-Pendant/: CMakeLists.txt
MQTT-Pendant/src/: main.cpp
src/: CMakeLists.txt  alarm_manager.cpp  battery_manager_interface.cpp  controller_wrangler.cpp  job_manager.cpp  kinematics.cpp  main.cpp  mqtt_transfer.cpp  nodeset.c  odrive_interface.cpp  odrive_safe_velocity_manager.cpp  opc_ua_server.cpp  pendant_manager.cpp  socketcan.cpp
src/include/: alarmList.json  alarm_manager.h  battery_manager_interface.h  build_number.h  controller_wrangler.h  global_defines.h  job_manager.h  kinematics.h  mqtt_transfer.h  node_ids.h  odrive_interface.h  odrive_safe_velocity_manager.h  opc_ua_server.h  pendant_manager.h  socketcan.h  version_num.h
